--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "~7",
         "guzzlehttp/guzzle": "^6.3",
-        "php-di/php-di": "^5.4"
+        "php-di/php-di": "^5.4",
+        "phpunit/phpunit": "5.4"
     },
     "autoload": {
         "psr-4": {
@@ -18,8 +19,6 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2",
-        "symfony/var-dumper": "~3"
     },
     "license": "MIT",
     "authors": [
