--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "require": {
         "php": "~7",
         "guzzlehttp/guzzle": "^6.3",
-        "php-di/php-di": "^5.4",
-        "phpunit/phpunit": "5.4"
+        "php-di/php-di": "^5.4"
     },
     "autoload": {
         "psr-4": {
