--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ php:
 
 before_install:
   - composer require satooshi/php-coveralls:dev-master
-  - composer install --dev
+  - composer install
 
 script:
-  - phpunit --coverage-clover ./tests/logs/clover.xml
+  - phpunit --coverage-clover tests/logs/clover.xml
 
 after_script:
   - php vendor/bin/coveralls -v
