--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - composer install
 
 script:
+  - mkdir -p tests/logs
   - phpunit --coverage-clover tests/logs/clover.xml
 
 after_script:
