--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "~7",
         "guzzlehttp/guzzle": "^6.3",
-        "php-di/php-di": "^5.4"
+        "php-di/php-di": "^5.4",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-4": {
