--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ script:
 
 after_script:
   - php vendor/bin/coveralls -v
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover tests/logs/clover.xml
