--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
-language: phpt
+language: php
 
 php:
   - 7.0
 
-before_install:
-  - composer install
+before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction
 
 script:
   - mkdir -p tests/logs
