--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,7 @@
     "description": "Package for ZPG Real Time Feed integration",
     "type": "library",
     "require": {
-        "php": "~7",
-        "guzzlehttp/guzzle": "^6.3",
-        "php-di/php-di": "^5.4"
+        "php": "~7"
     },
     "autoload": {
         "psr-4": {
@@ -18,6 +16,7 @@
         }
     },
     "require-dev": {
+        "phpunit/phpunit": "^6.2"
     },
     "license": "MIT",
     "authors": [
