--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Package for ZPG Real Time Feed integration",
     "type": "library",
     "require": {
-        "php": "~7"
+        "php": "~7",
+        "league/json-guard": "^1.0"
     },
     "autoload": {
         "psr-4": {
