--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php": "~7",
-        "league/json-guard": "^1.0"
+        "league/json-guard": "^1.0",
+        "league/json-reference": "^1.0"
     },
     "autoload": {
         "psr-4": {
